--- a/data607/lecture/DATA607__2021_02_22.ipynb
+++ b/data607/lecture/DATA607__2021_02_22.ipynb
@@ -369,8 +369,8 @@
       },
       "source": [
         "$$\n",
-        "p(Y=1\\mid X=x) = \\frac{p(X=x\\mid Y=1)p(Y=1)}\n",
-        "{p(X=x\\mid Y=0)p(Y=0) + p(X=x\\mid Y=1)p(Y=1)}\n",
+        "P(Y=1\\mid X=x) = \\frac{P(X=x\\mid Y=1)P(Y=1)}\n",
+        "{P(X=x\\mid Y=0)P(Y=0) + P(X=x\\mid Y=1)P(Y=1)}\n",
         "$$"
       ]
     },
